Task Update feature is done

--- a/frontend/templates/frontend/index.html
+++ b/frontend/templates/frontend/index.html
@@ -103,7 +103,7 @@
 
     <script type="text/javascript" src="{% static 'js/task-list.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/create-new-task.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/edit-task.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/update-task.js' %}"></script>
 </body>
 
 </html>
